@@ -8,7 +8,6 @@ import goorm.ddok.chat.repository.ChatMessageRepository;
 import goorm.ddok.chat.repository.ChatRepository;
 import goorm.ddok.chat.repository.ChatRoomMemberRepository;
 import goorm.ddok.chat.util.ChatMapper;
-import goorm.ddok.chat.util.PaginationUtil;
 import goorm.ddok.global.exception.ErrorCode;
 import goorm.ddok.global.exception.GlobalException;
 import goorm.ddok.member.domain.User;
@@ -21,8 +20,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,459 +32,207 @@ public class ChatService {
     private final UserRepository userRepository;
     private final ChatMapper chatMapper;
 
+    private User getUserByEmail(String email) {
+        return userRepository.findByEmail(email)
+                .orElseThrow(() -> new GlobalException(ErrorCode.USER_NOT_FOUND));
+    }
+
+    private ChatRoom getRoomById(Long roomId) {
+        return chatRepository.findById(roomId)
+                .orElseThrow(() -> new GlobalException(ErrorCode.CHAT_ROOM_NOT_FOUND));
+    }
+
     // 1:1 채팅 목록 조회
-    public ChatListResponseResponse getPrivateChats(String email, Pageable pageable) {
+    public ChatListResponse getPrivateChats(String email, Pageable pageable) {
 
-        Long userId = userRepository.findByEmail(email)
-                .orElseThrow(() -> new GlobalException(ErrorCode.USER_NOT_FOUND))
-                .getId();
+        User me = getUserByEmail(email);
 
-        // 사용자가 속한 채팅방 조회 조회
-        List<ChatRoomMember> userRooms = chatRoomMemberRepository.findAllByUserIdAndDeletedAtIsNull(userId);
+        Page<ChatRoom> page = chatRepository.pageRoomsByMemberAndTypeOrderByRecent(
+                me, ChatRoomType.PRIVATE, pageable);
 
-        // roomId만 추출
-        List<Long> roomIds = userRooms.stream()
-                .map(ChatRoomMember::getRoomId)
-                .distinct()
-                .toList();
+        List<ChatRoomResponse> chats = chatMapper.toChatRoomDtoList(page.getContent(), me.getId());
 
-        // 1:1 채팅방만 추출
-        List<ChatRoom> chatRooms = chatRepository.findByIdInAndRoomType(roomIds, ChatRoomType.PRIVATE);
-
-        // 최근 대화 순서
-        List<ChatMessage> recentMessages = chatMessageRepository.findAllByRoomIdInAndDeletedAtIsNullOrderByCreatedAtDesc(roomIds);
-
-        // 각 채팅방마다 가장 최근 메시지를 Map에 저장
-        Map<Long, ChatMessage> lastMessageMap = recentMessages.stream()
-                .collect(Collectors.toMap(
-                        ChatMessage::getRoomId,
-                        Function.identity(),
-                        (m1, m2) -> m1.getCreatedAt().isAfter(m2.getCreatedAt()) ? m1 : m2 // 최신 메시지 유지
-                ));
-
-        // 정렬
-        chatRooms.sort(Comparator
-                .comparing((ChatRoom room) -> {
-                    ChatMessage lastMessage = lastMessageMap.get(room.getId());
-                    return lastMessage != null ? lastMessage.getCreatedAt() : room.getCreatedAt();
-                }, Comparator.reverseOrder()) // 최신순
-                .thenComparing(ChatRoom::getCreatedAt, Comparator.reverseOrder()) // 생성일 순
-        );
-
-        // 페이징 처리
-        Page<ChatRoom> chatRoomPage = PaginationUtil.paginate(chatRooms, pageable);
-
-        // DTO 변환
-        List<ChatRoomResponse> chatRoomDtos = chatMapper.toChatRoomDtoList(chatRoomPage.getContent(), userId);
-        PaginationResponse pagination = PaginationUtil.from(chatRoomPage);
-
-        return ChatListResponseResponse.builder()
-                .chats(chatRoomDtos)
-                .pagination(pagination)
+        return ChatListResponse.builder()
+                .chats(chats)
+                .pagination(PaginationResponse.of(page))
                 .build();
     }
 
     // 팀 채팅 목록 조회
-    public ChatListResponseResponse getTeamChats(String email, Pageable pageable) {
+    public ChatListResponse getTeamChats(String email, Pageable pageable) {
 
-        Long userId = userRepository.findByEmail(email)
-                .orElseThrow(() -> new GlobalException(ErrorCode.USER_NOT_FOUND))
-                .getId();
+        User me = getUserByEmail(email);
 
-        // 사용자가 속한 채팅방 조회 조회
-        List<ChatRoomMember> userRooms = chatRoomMemberRepository.findAllByUserIdAndDeletedAtIsNull(userId);
+        Page<ChatRoom> page = chatRepository.pageRoomsByMemberAndTypeOrderByRecent(
+                me, ChatRoomType.GROUP, pageable);
 
-        // roomId만 추출
-        List<Long> roomIds = userRooms.stream()
-                .map(ChatRoomMember::getRoomId)
-                .distinct() // 중복 제거 (필요시)
-                .toList();
+        List<ChatRoomResponse> chats = chatMapper.toChatRoomDtoList(page.getContent(), me.getId());
 
-        // 팀 채팅방 추출
-        List<ChatRoom> chatRooms = chatRepository.findByIdInAndRoomType(roomIds, ChatRoomType.GROUP);
-
-        // 최근 대화 순서
-        List<ChatMessage> recentMessages = chatMessageRepository.findAllByRoomIdInAndDeletedAtIsNullOrderByCreatedAtDesc(roomIds);
-
-        // 각 채팅방마다 가장 최근 메시지를 Map에 저장
-        Map<Long, ChatMessage> lastMessageMap = recentMessages.stream()
-                .collect(Collectors.toMap(
-                        ChatMessage::getRoomId,
-                        Function.identity(),
-                        (m1, m2) -> m1.getCreatedAt().isAfter(m2.getCreatedAt()) ? m1 : m2 // 최신 메시지 유지
-                ));
-
-        // 정렬
-        chatRooms.sort(Comparator
-                .comparing((ChatRoom room) -> {
-                    ChatMessage lastMessage = lastMessageMap.get(room.getId());
-                    return lastMessage != null ? lastMessage.getCreatedAt() : room.getCreatedAt();
-                }, Comparator.reverseOrder()) // 최신순
-                .thenComparing(ChatRoom::getCreatedAt, Comparator.reverseOrder()) // 생성일 순
-        );
-
-        // 페이징 처리
-        Page<ChatRoom> chatRoomPage = PaginationUtil.paginate(chatRooms, pageable);
-
-        // DTO 변환
-        List<ChatRoomResponse> chatRoomDtos = chatMapper.toChatRoomDtoList(chatRoomPage.getContent(), userId);
-        PaginationResponse pagination = PaginationUtil.from(chatRoomPage);
-
-        return ChatListResponseResponse.builder()
-                .chats(chatRoomDtos)
-                .pagination(pagination)
+        return ChatListResponse.builder()
+                .chats(chats)
+                .pagination(PaginationResponse.of(page))
                 .build();
     }
 
     // 1:1 채팅 목록 검색
-    public ChatListResponseResponse searchPrivateChats(String email, String search, Pageable pageable) {
+    public ChatListResponse searchPrivateChats(String email, String search, Pageable pageable) {
 
-        Long userId = userRepository.findByEmail(email).orElseThrow(() ->
-                new GlobalException(ErrorCode.USER_NOT_FOUND)).getId();
+        User me = getUserByEmail(email);
 
-        // 사용자가 속한 채팅방 Id 조회
-        List<Long> myRoomIds = chatRoomMemberRepository.findAllByUserIdAndDeletedAtIsNull(userId).stream()
-                .map(ChatRoomMember::getRoomId)
-                .distinct()
-                .toList();
+        Page<ChatRoom> page = chatRepository.pagePrivateRoomsByMemberAndPeerNickname(
+                me, search, pageable);
 
-        // 닉네임에 검색어가 포함된 사용자 목록 조회
-        List<Long> matchedUserIds = userRepository.findAllByNicknameContaining(search).stream()
-                .map(User::getId)
-                .filter(id -> !id.equals(userId)) // 자기 자신 제외
-                .toList();
-
-        // 겹치는 채팅방만 추출
-        List<Long> matchedRoomIds = chatRoomMemberRepository.findAllByUserIdInAndDeletedAtIsNull(matchedUserIds).stream()
-                .map(ChatRoomMember::getRoomId)
-                .filter(myRoomIds::contains) // 내가 속한 채팅방과 교집합
-                .distinct()
-                .toList();
-
-        // 1:1 채팅방 목록 조회
-        List<ChatRoom> filteredRooms = chatRepository.findByIdInAndRoomType(matchedRoomIds, ChatRoomType.PRIVATE);
-
-        // 최근 대화 순서
-        List<ChatMessage> recentMessages = chatMessageRepository.findAllByRoomIdInAndDeletedAtIsNullOrderByCreatedAtDesc(matchedRoomIds);
-
-        // 각 채팅방마다 가장 최근 메시지를 Map에 저장
-        Map<Long, ChatMessage> lastMessageMap = recentMessages.stream()
-                .collect(Collectors.toMap(
-                        ChatMessage::getRoomId,
-                        Function.identity(),
-                        (m1, m2) -> m1.getCreatedAt().isAfter(m2.getCreatedAt()) ? m1 : m2 // 최신 메시지 유지
-                ));
-
-        // 정렬
-        filteredRooms.sort(Comparator
-                .comparing((ChatRoom room) -> {
-                    ChatMessage lastMessage = lastMessageMap.get(room.getId());
-                    return lastMessage != null ? lastMessage.getCreatedAt() : room.getCreatedAt();
-                }, Comparator.reverseOrder()) // 최신순
-                .thenComparing(ChatRoom::getCreatedAt, Comparator.reverseOrder()) // 생성일 순
-        );
-
-        // 페이징 처리
-        Page<ChatRoom> chatRoomPage = PaginationUtil.paginate(filteredRooms, pageable);
-
-        // DTO 변환
-        List<ChatRoomResponse> chatRoomDtos = chatMapper.toChatRoomDtoList(chatRoomPage.getContent(), userId);
-        PaginationResponse pagination = PaginationUtil.from(chatRoomPage);
-
-        return ChatListResponseResponse.builder()
-                .chats(chatRoomDtos)
-                .pagination(pagination)
+        List<ChatRoomResponse> chats = chatMapper.toChatRoomDtoList(page.getContent(), me.getId());
+        return ChatListResponse.builder()
+                .chats(chats)
+                .pagination(PaginationResponse.of(page))
                 .build();
     }
 
     // 팀 채팅 목록 검색
-    public ChatListResponseResponse searchTeamChats(String email, String search, Pageable pageable) {
+    public ChatListResponse searchTeamChats(String email, String search, Pageable pageable) {
 
-        Long userId = userRepository.findByEmail(email).orElseThrow(() ->
-                new GlobalException(ErrorCode.USER_NOT_FOUND)).getId();
+        User me = getUserByEmail(email);
 
-        // 사용자가 속한 채팅방 Id 및 검색어
-        List<Long> myRoomIds = chatRoomMemberRepository.findAllByUserIdAndDeletedAtIsNull(userId).stream()
-                .map(ChatRoomMember::getRoomId)
-                .distinct()
-                .toList();
+        Page<ChatRoom> page = chatRepository.pageGroupRoomsByMemberAndRoomOrMemberName(
+                me, search, pageable);
 
-        // 사용자가 속한 채팅방 없을 경우
-        if (myRoomIds.isEmpty()) {
-            return ChatListResponseResponse.builder()
-                    .chats(Collections.emptyList())
-                    .pagination(PaginationResponse.builder()
-                            .currentPage(pageable.getPageNumber())
-                            .pageSize(pageable.getPageSize())
-                            .totalPages(0)
-                            .totalItems(0L)
-                            .build())
-                    .build();
-        }
-
-        // 닉네임에 검색어가 포함된 사용자 목록 조회
-        List<Long> matchedUserIds = userRepository.findAllByNicknameContaining(search).stream()
-                .map(User::getId)
-                .filter(id -> !id.equals(userId))
-                .toList();
-
-        // 겹치는 채팅방만 추출
-        List<Long> matchedRoomIds = chatRoomMemberRepository.findAllByUserIdInAndDeletedAtIsNull(matchedUserIds).stream()
-                .map(ChatRoomMember::getRoomId)
-                .filter(myRoomIds::contains)
-                .distinct()
-                .toList();
-
-        // 팀 채팅방 목록 조회
-        List<ChatRoom> chatRooms = chatRepository.findByIdInAndRoomTypeAndNameContaining(myRoomIds, ChatRoomType.GROUP, search);
-        List<ChatRoom> filteredRooms = chatRepository.findByIdInAndRoomType(matchedRoomIds, ChatRoomType.GROUP);
-
-        // 리스트 중복 제거
-        List<ChatRoom> mergedRooms = new ArrayList<>();
-        mergedRooms.addAll(chatRooms);
-        mergedRooms.addAll(filteredRooms);
-
-        Map<Long, ChatRoom> uniqueRoomsMap = new LinkedHashMap<>();
-        for (ChatRoom room : mergedRooms) {
-            uniqueRoomsMap.putIfAbsent(room.getId(), room);
-        }
-        List<ChatRoom> uniqueRooms = new ArrayList<>(uniqueRoomsMap.values());
-
-        // uniqueRooms이 없을 때
-        if (uniqueRooms.isEmpty()) {
-            return ChatListResponseResponse.builder()
-                    .chats(Collections.emptyList())
-                    .pagination(PaginationResponse.builder()
-                            .currentPage(pageable.getPageNumber())
-                            .pageSize(pageable.getPageSize())
-                            .totalPages(0)
-                            .totalItems(0L)
-                            .build())
-                    .build();
-        }
-
-        // 최종 채팅방 ID 기준으로 마지막 메시지 가져오기
-        List<Long> finalRoomIds = uniqueRooms.stream()
-                .map(ChatRoom::getId)
-                .toList();
-
-        // 최근 대화 순서
-        List<ChatMessage> recentMessages = chatMessageRepository.findAllByRoomIdInAndDeletedAtIsNullOrderByCreatedAtDesc(finalRoomIds);
-
-        // 각 채팅방마다 가장 최근 메시지를 Map에 저장
-        Map<Long, ChatMessage> lastMessageMap = recentMessages.stream()
-                .collect(Collectors.toMap(
-                        ChatMessage::getRoomId,
-                        Function.identity(),
-                        (m1, m2) -> m1.getCreatedAt().isAfter(m2.getCreatedAt()) ? m1 : m2 // 최신 메시지 유지
-                ));
-
-        // 정렬
-        uniqueRooms.sort(Comparator
-                .comparing((ChatRoom room) -> {
-                    ChatMessage lastMessage = lastMessageMap.get(room.getId());
-                    return lastMessage != null ? lastMessage.getCreatedAt() : room.getCreatedAt();
-                }, Comparator.reverseOrder()) // 최신순
-                .thenComparing(ChatRoom::getCreatedAt, Comparator.reverseOrder()) // 생성일 순
-        );
-
-        // 페이징 처리
-        Page<ChatRoom> chatRoomPage = PaginationUtil.paginate(uniqueRooms, pageable);
-
-        // DTO 변환
-        List<ChatRoomResponse> chatRoomDtos = chatMapper.toChatRoomDtoList(chatRoomPage.getContent(), userId);
-        PaginationResponse pagination = PaginationUtil.from(chatRoomPage);
-
-        return ChatListResponseResponse.builder()
-                .chats(chatRoomDtos)
-                .pagination(pagination)
+        List<ChatRoomResponse> chats = chatMapper.toChatRoomDtoList(page.getContent(), me.getId());
+        return ChatListResponse.builder()
+                .chats(chats)
+                .pagination(PaginationResponse.of(page))
                 .build();
     }
 
     // 채팅 멤버 조회
-    public ChatMembersResponse getRoomMembers(Long roomID, String email) {
-        Long userId = userRepository.findByEmail(email).orElseThrow(() ->
-                new GlobalException(ErrorCode.USER_NOT_FOUND)).getId();
+    public ChatMembersResponse getRoomMembers(Long roomId, String email) {
+        User me = getUserByEmail(email);
+        ChatRoom roomRef = chatRepository.getReferenceById(roomId);
 
-        boolean isMember = chatRoomMemberRepository.existsByRoomIdAndUserIdAndDeletedAtIsNull(roomID, userId);
+        boolean isMember = chatRoomMemberRepository.existsByRoomAndUserAndDeletedAtIsNull(roomRef, me);
+        if (!isMember) throw new GlobalException(ErrorCode.NOT_CHAT_MEMBER);
 
-        if (!isMember) {
-            throw new GlobalException(ErrorCode.NOT_CHAT_MEMBER);
-        }
-
-        // 채팅방 멤버 조회 (User 정보 포함)
-        List<Object[]> roomMemberWithUserList = chatRoomMemberRepository.findAllByRoomIdWithUserInfo(roomID);
-
-        List<ChatMembersResponse.Member> members = roomMemberWithUserList.stream()
-                .map(result -> {
-                    ChatRoomMember roomMember = (ChatRoomMember) result[0];
-                    User user = (User) result[1];
-
-                    return ChatMembersResponse.Member.builder()
-                            .userId(roomMember.getUserId()) // 실제 사용자 ID
-                            .nickname(user.getNickname())
-                            .profileImage(user.getProfileImageUrl())
-                            .role(String.valueOf(roomMember.getRole()))
-                            .joinedAt(roomMember.getCreatedAt())
-                            .build();
-                })
-                .collect(Collectors.toList());
+        // User를 한 번에 가져오도록 EntityGraph/Fetch Join 사용
+        List<ChatRoomMember> members = chatRoomMemberRepository.findByRoomWithUser(roomRef);
+        List<ChatMembersResponse.Member> dtos = members.stream()
+                .map(m -> ChatMembersResponse.Member.builder()
+                        .userId(m.getUser().getId())
+                        .nickname(m.getUser().getNickname())
+                        .profileImage(m.getUser().getProfileImageUrl())
+                        .role(String.valueOf(m.getRole()))
+                        .joinedAt(m.getCreatedAt())
+                        .build())
+                .toList();
 
         return ChatMembersResponse.builder()
-                .members(members)
-                .totalCount(members.size())
+                .members(dtos)
+                .totalCount(dtos.size())
                 .build();
     }
 
     // 메세지 전송
+    @Transactional
     public ChatMessageResponse sendMessage(String email, Long roomId, ChatMessageRequest request) {
-        User sender = userRepository.findByEmail(email).orElseThrow(() ->
-                new GlobalException(ErrorCode.USER_NOT_FOUND));
+        User sender = getUserByEmail(email);
+        ChatRoom room = getRoomById(roomId);
 
-        ChatRoom chatRoom = chatRepository.findById(roomId)
-                .orElseThrow(() -> new GlobalException(ErrorCode.CHAT_ROOM_NOT_FOUND));
-
-        // 사용자가 해당 채팅방의 멤버인지 확인
-        boolean isMember = chatRoomMemberRepository.existsByRoomIdAndUserId(roomId, sender.getId());
-        if (!isMember) {
+        if (!chatRoomMemberRepository.existsByRoomAndUser(room, sender)) {
             throw new GlobalException(ErrorCode.NOT_CHAT_MEMBER);
         }
 
-        // 메시지 저장 및 채팅방 시간 갱신
-        ChatMessage savedMessage = saveMessageAndUpdateRoom(
-                chatRoom,
-                sender.getId(),
-                request.getContentType(),
-                request.getContentText(),
-                request.getFileUrl(),
-                request.getReplyToId()
-        );
+        ChatMessage replyTo = (request.getReplyToId() == null) ? null :
+                chatMessageRepository.findById(request.getReplyToId()).orElse(null);
 
+        ChatMessage saved = chatMessageRepository.save(ChatMessage.builder()
+                .room(room)
+                .sender(sender)
+                .contentType(request.getContentType())
+                .contentText(request.getContentText())
+                .fileUrl(request.getFileUrl())
+                .replyTo(replyTo)
+                .build());
+
+        room.setLastMessageAt(saved.getCreatedAt());
 
         return ChatMessageResponse.builder()
-                .messageId(savedMessage.getId())
-                .roomId(savedMessage.getRoomId())
-                .senderId(savedMessage.getSenderId())
+                .messageId(saved.getId())
+                .roomId(room.getId())
+                .senderId(sender.getId())
                 .senderNickname(sender.getNickname())
-                .contentType(savedMessage.getContentType())
-                .contentText(savedMessage.getContentText())
-                .fileUrl(savedMessage.getFileUrl())
-                .createdAt(savedMessage.getCreatedAt())
+                .contentType(saved.getContentType())
+                .contentText(saved.getContentText())
+                .fileUrl(saved.getFileUrl())
+                .createdAt(saved.getCreatedAt())
                 .build();
     }
 
-    @Transactional
-    public ChatMessage saveMessageAndUpdateRoom(
-            ChatRoom chatRoom,
-            Long senderId,
-            ChatContentType contentType,
-            String contentText,
-            String fileUrl,
-            Long replyToId
-    ) {
-        ChatMessage chatMessage = ChatMessage.builder()
-                .roomId(chatRoom.getId())
-                .senderId(senderId)
-                .contentType(contentType)
-                .contentText(contentText)
-                .fileUrl(fileUrl)
-                .replyToId(replyToId)
-                .build();
-
-        ChatMessage savedMessage = chatMessageRepository.save(chatMessage);
-
-        chatRoom.setLastMessageAt(savedMessage.getCreatedAt());
-        chatRepository.save(chatRoom);
-
-        return savedMessage;
-    }
-
-    // 채팅 메세지 키워드 검색 조회
+    // 채팅 메세지 메시지 목록/검색
     @Transactional
     public ChatMessageListResponse getChatMessages(String email, Long roomId, Pageable pageable, String search) {
-        User sender = userRepository.findByEmail(email).orElseThrow(() ->
-                new GlobalException(ErrorCode.USER_NOT_FOUND));
+        User me = getUserByEmail(email);
+        ChatRoom room = getRoomById(roomId);
 
-        ChatRoom chatRoom = chatRepository.findById(roomId)
-                .orElseThrow(() -> new GlobalException(ErrorCode.CHAT_ROOM_NOT_FOUND));
+        if (!chatRoomMemberRepository.existsByRoomAndUserAndDeletedAtIsNull(room, me)) {
+            throw new GlobalException(ErrorCode.NOT_CHAT_MEMBER);
+        }
 
-        Integer size = pageable.getPageSize();
-        List<ChatMessage> messages = (search == null || search.trim().isEmpty())
-                ? chatMessageRepository.findAllByRoomIdAndDeletedAtIsNullOrderByCreatedAtDesc(roomId)
-                : chatMessageRepository.findAllByRoomIdAndContentTextContainingAndDeletedAtIsNullOrderByCreatedAtDesc(roomId, search);
+        Page<ChatMessageRepository.MessageView> page =
+                (search == null || search.isBlank())
+                        ? chatMessageRepository.pageViewsByRoom(room, pageable)
+                        : chatMessageRepository.pageViewsByRoomAndKeyword(room, search, pageable);
 
-        Page<ChatMessage> chatMessagePage = PaginationUtil.paginate(messages, pageable);
-        PaginationResponse pagination = PaginationUtil.from(chatMessagePage);
-
-        List<ChatMessageResponse> messageResponses = chatMessagePage.getContent().stream()
-                .map(message -> ChatMessageResponse.builder()
-                        .messageId(message.getId())
-                        .roomId(message.getRoomId())
-                        .senderId(message.getSenderId())
-                        .senderNickname(
-                                userRepository.findById(message.getSenderId())
-                                        .map(User::getNickname)
-                                        .orElse("알 수 없음")
-                        )
-                        .contentType(message.getContentType())
-                        .contentText(message.getContentText())
-                        .fileUrl(message.getFileUrl())
-                        .createdAt(message.getCreatedAt())
+        List<ChatMessageResponse> messages = page.getContent().stream()
+                .map(v -> ChatMessageResponse.builder()
+                        .messageId(v.getId())
+                        .roomId(room.getId())
+                        .senderId(v.getSenderId())
+                        .senderNickname(v.getSenderNickname())
+                        .contentType(v.getContentType())
+                        .contentText(v.getContentText())
+                        .fileUrl(v.getFileUrl())
+                        .createdAt(v.getCreatedAt())
                         .build())
                 .toList();
 
         return ChatMessageListResponse.builder()
-                .messages(messageResponses)
-                .pagination(pagination)
+                .messages(messages)
+                .pagination(PaginationResponse.of(page))
                 .build();
     }
 
     // 마지막 읽은 메세지 처리
-    public void lastReadMessage(String email, Long roomId, LastReadMessageRequest request) {
+    @Transactional
+    public ChatReadResponse lastReadMessage(String email, Long roomId, LastReadMessageRequest request) {
 
-        Long userId = userRepository.findByEmail(email).orElseThrow(() ->
-                new GlobalException(ErrorCode.USER_NOT_FOUND)).getId();
+        User me = getUserByEmail(email);
+        ChatRoom roomRef = chatRepository.getReferenceById(roomId);
 
-        ChatRoomMember chatRoomMember = chatRoomMemberRepository.findByRoomIdAndUserId(roomId, userId)
+        ChatRoomMember member = chatRoomMemberRepository.findByRoomAndUser(roomRef, me)
                 .orElseThrow(() -> new GlobalException(ErrorCode.NOT_CHAT_MEMBER));
 
-        chatRoomMember.setLastReadMessageId(request.getMessageId());
-        chatRoomMemberRepository.save(chatRoomMember);
+        member.setLastReadMessageId(request.getMessageId());
+
+        return ChatReadResponse.builder()
+                .messageId(request.getMessageId())
+                .build();
     }
 
     @Transactional
     public void createPrivateChatRoom(User sender, User receiver) {
-        // 기존 1:1 채팅방 존재 확인
-        Optional<ChatRoom> originChatRoom = chatRepository.findPrivateRoomByUserIds(sender.getId(), receiver.getId());
-
-        if (originChatRoom.isPresent()) {
+        if (chatRepository.existsPrivateRoomByUserIds(sender.getId(), receiver.getId())) {
             throw new GlobalException(ErrorCode.CHAT_ROOM_ALREADY_EXISTS);
         }
 
-        // ChatRoom 저장
-        ChatRoom chatRoom = ChatRoom.builder()
+        ChatRoom room = chatRepository.save(ChatRoom.builder()
                 .roomType(ChatRoomType.PRIVATE)
-                .ownerUserId(sender.getId())
-                .build();
+                .owner(sender)
+                .build());
 
-        chatRepository.save(chatRoom);
+        ChatRoomMember admin = ChatRoomMember.builder()
+                .room(room).user(sender).role(ChatMemberRole.ADMIN).build();
+        ChatRoomMember member = ChatRoomMember.builder()
+                .room(room).user(receiver).role(ChatMemberRole.MEMBER).build();
 
-        // ChatRoomMember 저장
-        ChatRoomMember member1 = ChatRoomMember.builder()
-                .roomId(chatRoom.getId())
-                .userId(sender.getId())
-                .role(ChatMemberRole.ADMIN) // 요청자가 owner라 생각함.
-                .build();
-
-        ChatRoomMember member2 = ChatRoomMember.builder()
-                .roomId(chatRoom.getId())
-                .userId(receiver.getId())
-                .role(ChatMemberRole.MEMBER)
-                .build();
-
-        chatRoomMemberRepository.saveAll(List.of(member1, member2));
+        chatRoomMemberRepository.saveAll(List.of(admin, member));
     }
 }
-
-
-
